virt01/manual/torrent/picard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picard-svc
  labels:
    app: picard
spec:
  ports:
    - port: 5800
      protocol: TCP
      targetPort: 5800
      name: picard-svc-port
  selector:
    app: picard
