virt01/manual/torrent/picard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picard-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: picard.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: picard-svc
            port:
              number: 5800
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - picard.k3s.nf.lab
    secretName: picard-cert-tls
